# pred-analytics-HON

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  run_pipeline.py
configs/: data_generation.yaml  feature_engineering.yaml  model_training.yaml
data/: tech_decisions.md
deployment/api/: Dockerfile  README.md  __init__.py  config.py  main.py  requirements.txt  test_api.py  test_client.py
docs/: PIPELINE_GUIDE.md  final_summary.md  phase1_data_generation.md  phase2_sessionization.md  phase3_feature_engineering.md
models/: xgboost_v1_model.json
scripts/: final_evaluation.py  generate_data.py  generate_features.py  run_pipeline.sh
src/data/: catalog.py  clickstream.py  sessionization.py  users.py
src/features/: engineering.py
src/models/: trainer.py
